--- a/kdoctools/customization/it/entities/fdl-notice.docbook
+++ b/kdoctools/customization/it/entities/fdl-notice.docbook
@@ -27,7 +27,7 @@
 documento sotto i termini della GNU Free Documentation License,
 versione 1.1 o qualsiasi versione successiva pubblicata dalla Free Software
 Foundation; con &FDLInvariantSections;, con &FDLFrontCoverText; e
-con &FDLBackCoverText;. Una copia di questa licenza &egrave; inclusa in <xref linkend="gnu-fdl"/>.</para>
+con &FDLBackCoverText;. Una copia di questa licenza &egrave; inclusa nella <xref linkend="gnu-fdl"/>.</para>
 
 <!-- If you have no Invariant Sections, don't add any FDLIS entities.
      If you have no Front-Cover Texts, don't add any FDLFCT; likewise
