--- a/kdoctools/customization/he/entities/underBSDLicense.docbook
+++ b/kdoctools/customization/he/entities/underBSDLicense.docbook
@@ -1,2 +1,2 @@
-<para>This program is licensed under the terms of the <ulink
-url="common/bsd-license.html">BSD License</ulink>.</para>
+<para>תוכנית זו מורשית תחת התנאים של <ulink
+url="common/bsd-license.html">רישיון BSD</ulink>.</para>
