--- a/kdoctools/customization/he/entities/underFDL.docbook
+++ b/kdoctools/customization/he/entities/underFDL.docbook
@@ -1,4 +1,2 @@
-<para id="gnu-fdl" xreflabel="the section entitled &quot;GNU Free Documentation
-License&quot;">This documentation is licensed under the terms of the <ulink
-url="common/fdl-license.html">GNU Free Documentation
-License</ulink>.</para>
+<para id="gnu-fdl" xreflabel="הסעיף שכותרתו &quot;רישיון התיעוד החופשי של GNU&quot;">תיעוד זה מורשה תחת התנאים של <ulink
+url="common/fdl-license.html">רישיון התיעוד החופשי של GNU</ulink>.</para>
