--- a/kdoctools/customization/he/entities/gpl-notice.docbook
+++ b/kdoctools/customization/he/entities/gpl-notice.docbook
@@ -11,19 +11,12 @@
 
     Alternatively, you can include the text literally.
  -->
-<para>This program is free software; you can redistribute it and/or
-modify it under the terms of the GNU General Public License as
-published by the Free Software Foundation; either version 2 of the
-License, or (at your option) any later version.</para>
+<para>תוכנית זו הינה תוכנה חופשית; באפשרותך להפיץ אותה מחדש ו\או לשנותה תחת התנאים של הרישיון הציבורי הכללי של GNU כפי שפורסם על ידי אירגון התוכנה החופשית; או גירסה 2 של הרישיון, או (לפי בחירתך) כל גירסה מאוחרת יותר.</para>
 
-<para>This program is distributed in the hope that it will be
-useful, but WITHOUT ANY WARRANTY; without even the implied warranty
-of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-General Public License for more details.</para>
+<para>תוכנית זו מופצת בתקווה שהיא תהיה שימושית, אך ללא כל אחריות; אפילו ללא האחריות המשתמעת של סחירות או התאמה למטרה מסויימת. עיין ברישיון הציבורי הכללי של GNU לפרטים נוספים.</para>
 
-<para>You should have received a copy of the GNU General Public
-License along with this program; if not, write to the Free Software
-Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.</para>
+<para>היית אמור לקבל עותק של הרישיון הציבורי הכללי של GNU ביחד עם תוכנית זו; אם לא כך הדבר, כתוב אל Free Software Foundation, Inc., 675 Mass Ave, Cambridge,
+MA 02139, USA.</para>
 <!--
 Local variables:
 mode: sgml
