--- a/kdoctools/customization/he/entities/help-menu.docbook
+++ b/kdoctools/customization/he/entities/help-menu.docbook
@@ -5,12 +5,12 @@
 <shortcut>
 <keycombo action="simul"><keycap>F1</keycap></keycombo>
 </shortcut>
-<guimenu>Help</guimenu>
-<guimenuitem>Contents...</guimenuitem>
+<guimenu>עזרה</guimenu>
+<guimenuitem>תוכן...</guimenuitem>
 </menuchoice>
 </term>
-<listitem><para><action>Invokes the KDE Help system</action> starting at the
-&kappname; help pages. (this document).</para></listitem>
+<listitem><para><action>הפעלת מערכת העזרה</action> עם דפי העזרה של
+&kappname; (מסמך זה) בתור דף ההתחלה.</para></listitem>
 </varlistentry>
 
 <varlistentry>
@@ -18,41 +18,35 @@
 <shortcut>
 <keycombo action="simul">&Shift;<keycap>F1</keycap></keycombo>
 </shortcut>
-<guimenu>Help</guimenu>
-<guimenuitem>What's This?</guimenuitem>
+<guimenu>עזרה</guimenu>
+<guimenuitem>מה זה?</guimenuitem>
 </menuchoice>
 </term>
-<listitem><para><action>Changes the mouse cursor to a combination arrow and
-question mark.</action>  Clicking on items within &kappname; will open a help
-window (if one exists for the particular item) explaining the item's
-function.</para></listitem>
+<listitem><para><action>שינוי מצביע העכבר לשילוב של חץ וסימן שאלה.</action> לחיצה על פריטים בתוך &kappname; תביא לפתיחת חלון עזרה (אם קיימת עזרה לפריט ספציפי זה) המסביר את השימושים של הפריט.</para></listitem>
 </varlistentry>
 
 
 <varlistentry>
 <term><menuchoice>
-<guimenu>Help</guimenu>
-<guimenuitem>Report Bug...</guimenuitem>
+<guimenu>עזרה</guimenu>
+<guimenuitem>דיווח על באג...</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>Opens the Bug report dialog</action> where you can
-report a bug or request a <quote>wishlist</quote> feature.</para></listitem>
+<listitem><para><action>פתיחת דו-שיח הדיווח על באג</action>, בו באפשרותך לדווח על באג או לבקש תכונה במסגרת <quote>רשימת המשאלות</quote>.</para></listitem>
 </varlistentry>
 
 <varlistentry>
 <term><menuchoice>
-<guimenu>Help</guimenu>
-<guimenuitem>About &kappname;</guimenuitem>
+<guimenu>עזרה</guimenu>
+<guimenuitem>אודות &kappname;</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>This will display version and author
-information.</action></para></listitem>
+<listitem><para><action>הצגת מידע לגבי הגירסה והכותב.</action></para></listitem>
 </varlistentry>
 
 <varlistentry>
 <term><menuchoice>
-<guimenu>Help</guimenu>
-<guimenuitem>About KDE</guimenuitem>
+<guimenu>עזרה</guimenu>
+<guimenuitem>אודות KDE</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>This displays the KDE version and other basic
-information.</action></para></listitem>
+<listitem><para><action>הצגת הגירסה של KDE ומידע בסיסי נוסף.</action></para></listitem>
 </varlistentry>
 </variablelist>
