--- a/kdoctools/customization/he/entities/install-compile.docbook
+++ b/kdoctools/customization/he/entities/install-compile.docbook
@@ -1,12 +1,9 @@
-<para>In order to compile and install &kappname; on your system, type the
-following in the base directory of the &kappname; distribution:</para>
+<para>לשם הידור והתקנת &kappname; במחשב שלך, הקלד את הפקודות הבאות בספריית הבסיס של ההפצה של &kappname;:</para>
 
 <screen><prompt>%</prompt> <userinput><command>./configure</command></userinput>
 <prompt>%</prompt> <userinput><command>make</command></userinput>
 <prompt>%</prompt> <userinput><command>make</command> install</userinput>
 </screen>
 
-<para>Since &kappname; uses <command>autoconf</command> and
-<command>automake</command> you should have no trouble compiling it. Should you
-run into problems please report them to the &kde; mailing lists.</para>
+<para>מאחר ש-&kappname; משתמש ב-<command>autoconf</command> וב-<command>automake</command>, לא אמורה להיות בעיה עם ההידור. באם אתה נתקל בבעיות, דווח עליהן לרשימות הדיוור של &kde;.</para>
 
