--- a/kdoctools/customization/he/entities/install-intro.docbook
+++ b/kdoctools/customization/he/entities/install-intro.docbook
@@ -1,6 +1,5 @@
 <!-- requires that packagename is defined in the documentation prologue
  -->
-<para>&kappname; is part of the &kde; project &kde-http;.</para>
+<para>&kappname; מהווה חלק מהפרוייקט של &kde; &kde-http;.</para>
 
-<para>&kappname; can be found in the &package; package on &kde-ftp;, 
-the main &FTP; site of the &kde; project.</para>
+<para>ניתן למצוא את &kappname; בחבילה &package; בכתובת &kde-ftp;, אתר ה-&FTP; הראשי של הפרוייקט של &kde;.</para>
