--- a/kdoctools/customization/he/entities/lgpl-notice.docbook
+++ b/kdoctools/customization/he/entities/lgpl-notice.docbook
@@ -11,20 +11,12 @@
 
     Alternatively, you can include the text literally.
  -->
-<para>This library is free software; you can redistribute it and/or
-modify it under the terms of the GNU Lesser General Public License
-as published by the Free Software Foundation; either version 2 of
-the License, or (at your option) any later version.</para>
+<para>ספריה זו הינה תוכנה חופשית; באפשרותך להפיץ אותה מחדש ו\או לשנותה תחת התנאים של הרישיון הציבורי הפחות כללי של GNU כפי שפורסם על ידי אירגון התוכנה החופשית; או גירסה 2 של הרישיון, או (לפי בחירתך) כל גירסה מאוחרת יותר.</para>
 
-<para>This library is distributed in the hope that it will be
-useful, but WITHOUT ANY WARRANTY; without even the implied warranty
-of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-Lesser General Public License for more details.</para>
+<para>ספריה זו מופצת בתקווה שהיא תהיה שימושית, אך ללא כל אחריות; אפילו ללא האחריות המשתמעת של סחירות או התאמה למטרה מסויימת. עיין ברישיון הציבורי הפחות כללי של GNU לפרטים נוספים.</para>
 
-<para>You should have received a copy of the GNU Lesser General
-Public License along with this library; if not, write to the Free
-Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
-02111-1307 USA</para>
+<para>היית אמור לקבל עותק של הרישיון הציבורי הפחות כללי של GNU ביחד עם ספריה זו; אם לא כך הדבר, כתוב אל Free Software Foundation, Inc., 59 Temple Place,
+Suite 330, Boston, MA 02111-1307 USA</para>
 <!--
 Local variables:
 mode: sgml
