--- a/kdoctools/customization/he/entities/underArtisticLicense.docbook
+++ b/kdoctools/customization/he/entities/underArtisticLicense.docbook
@@ -1,2 +1,2 @@
-<para>This program is licensed under the terms of the <ulink
-url="common/artistic-license.html">Artistic License</ulink>.</para>
+<para>תוכנית זו מורשית תחת התנאים של <ulink
+url="common/artistic-license.html">הרישיון האמנותי</ulink>.</para>
