--- a/kdoctools/customization/he/entities/underGPL.docbook
+++ b/kdoctools/customization/he/entities/underGPL.docbook
@@ -1,2 +1,2 @@
-<para>This program is licensed under the terms of the <ulink
-url="common/gpl-license.html">GNU General Public License</ulink>.</para>
+<para>תוכנית זו מורשית תחת התנאים של <ulink
+url="common/gpl-license.html">הרישיון הציבורי הכללי של GNU</ulink>.</para>
