--- a/kdoctools/customization/he/entities/underX11License.docbook
+++ b/kdoctools/customization/he/entities/underX11License.docbook
@@ -1,2 +1,2 @@
-<para>This program is licensed under the terms of the <ulink
-url="common/x11-license.html">X11 License</ulink>.</para>
+<para>תוכנית זו מורשית תחת התנאים של <ulink
+url="common/x11-license.html">רישיון X11</ulink>.</para>
