--- a/kdoctools/customization/he/entities/update-doc.docbook
+++ b/kdoctools/customization/he/entities/update-doc.docbook
@@ -1,4 +1,2 @@
-<!--<para>This document may have been updated since your installation.
-Check at <ulink
-url="http://docs.kde.org/page#&kappname;">http://docs.kde.org/page#&kappname;</ulink>
-to see if there is a newer version.</para> -->
+<!--<para>ייתכן שמסמך זה התעדכן מאז ההתקנה שלך. בדוק אם יש גירסה חדשה יותר בכתובת <ulink
+url="http://docs.kde.org/page#&kappname;">http://docs.kde.org/page#&kappname;</ulink>.</para> -->
