Introducing KAudioConverter Features * converting xxx (mp3, ogg...) -> raw data * samplerate can be specified * automatic mimetype detection * remote and local url support * automatic streaming
if you connect to the signal newData(), data
pipelining blocks until slotNewData() is exited
(hi jowenn! ;)

BUGS
1. KAudioConverter::setup() crashes, let's ask stw
2. just tried over smb:/ seems to crash :/
   tried with kaboodle, too.. crashes also...
   It's KIOInputStream's fault... what happened? matze?

svn path=/trunk/kdelibs/; revision=151878

--- a/arts/kde/README
+++ b/arts/kde/README
@@ -9,7 +9,7 @@ ie. no need to deal with std::string's anymore
 etc.. you can just use QString's or KURL's
 to play sound
 
-2. How to use it?
+2. How to use it to play sounds?
 <snip>
 1	KArtsDispatcher dispatcher;
 2	KArtsServer server;
@@ -38,14 +38,13 @@ Line:
 		 	(specifies wheter to create a Synth_BUS_UPLINK or not, "false" is only interesting if you want to use EffectsStacks etc..., see Noatun)
 6	Play the file
 
-That's it, with 7 LOC a "full" media player :)
+That's it, with 6 LOC a "full" media player :)
 
 To make the example above compile you will also have to add these #includes:
 #include <arts/kartsserver.h>
 #include <arts/kartsdispatcher.h>
 #include <arts/kplayobject.h>
 #include <arts/kplayobjectfactory.h>
-    
 
 Enjoy...
 Nikolas Zimmermann 
