Foomatic DB: show the recommanded driver, and select it by default
svn path=/trunk/kdelibs/; revision=155236

--- a/kdeprint/TODO
+++ b/kdeprint/TODO
@@ -49,3 +49,5 @@ WISHES
 
 - in CUPS possibility to filter printer using printer-type attribute,
   to get only printers having a specified capability
+
+- show information from Foomatic DB in some way (comments)
